
    * tuxpaint-import.sh now uses single brackets when testing for "--help".
      (Apparently, the "[[...]]" version didn't work some places.)
      Jeff Smith <whydoubt@yahoo.com>

    * Failed to install default locale fonts.  Fixed.
      kyjo44 <kyjo44@users.sourceforge.net>

  * Compiling, porting and packaging updates:
    -----------------------------------------
    * Added additional Windows-only search paths for stamps, fonts and brushes.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Created Makefile to convert HTML documentation into plaintext using Links
      (I can never remember the precise options!)

    * *_PREFIX variables in Makefile no longer need trailing '/'.

    * Added "Categories" to the 'tuxpaint.desktop' file
      ("Education," "RasterGraphics," "Graphics" and "Art").
      
    * Added 'win32' target to Makefile, for use on Windows with MinGW/MSYS.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Now links with 'shlwapi.dll' so that it works on Windows 98.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Added GetDefaultSaveDir(suffix) which fetches the default
      "Application Data" path for the current user from the Windows registry,
      appends the suffix, creates the subdirectory if it doesn't exist,
      then returns a string from the heap.  This path is the new default
      "savedir" location on Windows. Tested on 98/2K/XP.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Switching from NSIS to InnoSetup 5 installer generator for Windows.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Added a Windows registry entry 'Install_Dir' in either
      HKCU\Software\TuxPaint or HKLM... depending on whether the user is
      restricted (or doing a current user-only install) or is installing
      for all users.
      John Popplewell <john@johnnypops.demon.co.uk>

    * Added ability to detect previous install directory entries in the